--- a/example.ipynb
+++ b/example.ipynb
@@ -45,11 +45,11 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/resnet/resnet50_weights_tf_dim_ordering_tf_kernels.h5\n102973440/102967424 [==============================] - 9s 0us/step\n"
+     "text": "Downloading data from https://storage.googleapis.com/tensorflow/keras-applications/inception_v3/inception_v3_weights_tf_dim_ordering_tf_kernels.h5\n96116736/96112376 [==============================] - 9s 0us/step\n"
     }
    ],
    "source": [
-    "test=load_model('resnet')"
+    "test=load_model('inceptionv3')"
    ]
   },
   {
