--- a/example.ipynb
+++ b/example.ipynb
@@ -100,6 +100,13 @@
    ]
   },
   {
+   "source": [
+    "# GradCAM"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
@@ -137,6 +144,13 @@
     "axarr[1].imshow(heatmap_colormap)\n",
     "axarr[2].imshow(overlayed_img)"
    ]
+  },
+  {
+   "source": [
+    "# GradCAM Robust - average"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -178,6 +192,13 @@
    ]
   },
   {
+   "source": [
+    "# GradCAM Robust - max"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -215,6 +236,13 @@
    ]
   },
   {
+   "source": [
+    "# GradCAM++"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -250,6 +278,13 @@
     "axarr[1].imshow(heatmap_colormap)\n",
     "axarr[2].imshow(overlayed_img)"
    ]
+  },
+  {
+   "source": [
+    "# Guided Backprop"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
