gc++ nan issue fix v3

--- a/debugGradCAM.ipynb
+++ b/debugGradCAM.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,31 +72,38 @@
     "        neuron_importance_weights_denom = np.where(neuron_importance_weights_denom != 0.0, neuron_importance_weights_denom, 1e-10)\n",
     "        \n",
     "        neuron_importance_weights = neuron_importance_weights_num/neuron_importance_weights_denom\n",
-    "        # print(neuron_importance_weights)\n",
     "        Z = np.sum(neuron_importance_weights, axis=(0,1))\n",
     "        Z= np.where(Z != 0.0, Z, 1e-10)\n",
     "        neuron_importance_weights /= Z\n",
-    "        print(Z)\n",
+    "\n",
     "        weights = tf.keras.activations.relu(gradients1[0]) \n",
     "        weights = np.sum(weights*neuron_importance_weights, axis=(0,1))\n",
     "        gradcampp = np.sum(weights*layer_output[0], axis=2)\n",
     "\n",
     "        gradcampp = tf.keras.activations.relu(gradcampp)\n",
-    "        gradcampp=gradcampp/np.max(gradcampp) \n",
+    "        if np.max(gradcampp)==0:\n",
+    "            gradcampp=gradcampp/(np.max(gradcampp) +tf.keras.backend.epsilon())\n",
+    "        else:\n",
+    "            gradcampp=gradcampp/np.max(gradcampp) \n",
+    "        \n",
     "\n",
     "        return gradcampp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "[2.1607097e-02 3.3122438e-01 1.0000000e-10 ... 1.0000000e-10 1.0000000e-10\n 2.8768060e-01]\n"
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'load_model' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-1dfb71de5998>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mmodel_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'resnet'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mtest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mload_model\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0minput_dim\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtest\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minput_dim\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_model' is not defined"
      ]
     }
    ],
